<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kristoff.eyedetection.SplashActivity"
    android:background="@color/colorDarkGray">

    <ImageView
        android:contentDescription="@string/imgDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewP"
        android:src="@drawable/full"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView android:id="@+id/splashText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_alignBottom="@id/imageViewP"
        android:paddingBottom="40dp"
        android:textSize="40sp"/>

    <TextView android:id="@+id/splashText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subhead"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/imageViewP"/>
</RelativeLayout>
